--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			background-color: lightgreen;
 		}
 	</style>
-	<script src="http://code.jquery.com/jquery-1.12.0.min.js"></script>
+	<script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
 </head>
 <body>
 	<div class="container">
